// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> accepts a value 1`] = `
<input
  name="batman_name"
  type="text"
  value="Bruce Wayne"
/>
`;

exports[`<TextInput /> renders without crashing 1`] = `
<input
  name="batman_name"
  type="text"
/>
`;
